--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,19 @@
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
+
+img {
+  align-self: center;
+    width: 400px;
+    height: 400px;
+    margin-bottom: -25px;
+}
+
 
 textarea {
   background: transparent;
@@ -19,6 +30,7 @@ textarea {
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  padding: 10px;
 }
 
 .description {
